optimized cursor style

--- a/src/components/Search/style.module.scss
+++ b/src/components/Search/style.module.scss
@@ -51,6 +51,7 @@
         }
         .input{
             background: transparent;
+            color: #000;
             &::placeholder{
                 color: #B4B4B4;
             }
